# contextseek

./: .env.example  .gitignore  Makefile  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
dashboard/: README.md
docs/: README.md
docs/en/: README.md  troubleshooting.md
docs/en/concepts/: context-model.md  retrieval-model.md  scope-and-stage.md
docs/en/getting-started/: configuration.md  installation.md  quickstart.md
docs/en/guides/: cli.md  core-concepts.md  evolution.md  observability.md  storage.md  write-and-retrieve.md
docs/en/reference/: api.md  settings.md
docs/zh/: README.md  troubleshooting.md
docs/zh/concepts/: context-model.md  retrieval-model.md  scope-and-stage.md
docs/zh/getting-started/: configuration.md  installation.md  quickstart.md
docs/zh/guides/: cli.md  core-concepts.md  evolution.md  observability.md  storage.md  write-and-retrieve.md
docs/zh/reference/: api.md  settings.md
eval/: __init__.py
eval/appworld/: README.md  __init__.py  agent.py  appworld_worker.py  context.py  design.md  environment.py  prompts.py  run.py
eval/appworld/adapters/: __init__.py  baseline.py  contextseek_react.py
eval/appworld/config/: contextseek_evolve.yaml  contextseek_react.yaml  contextseek_react_oceanbase.yaml  contextseek_store_only.yaml  contextseek_store_only_oceanbase.yaml  default.yaml
eval/appworld/pipeline/: distiller.py  evaluator.py
eval/taubench/: README.md  __init__.py  context.py  design.md  prompts.py  run.py
eval/taubench/adapters/: base.py  baseline.py  contextseek_react.py
eval/taubench/config/: baseline.yaml  contextseek_evolve.yaml  (+5 more)
examples/: README.md  full_pipeline_file.py  full_pipeline_ob.py  langchain_pipeline.py  llm_full_pipeline_oceanbase.py  powermem_minimal.py  powermem_plug_demo.py  research_agent_demo.py
examples/advanced/: research_agent.py
examples/demo/: .env.example  README.md  graph.py  langgraph.json  seed.py  tools.py
examples/gis/: README.md  autonomous_driving.py  gis_memory.py  poi_search.py  ride_hailing.py  smart_swap.py
src/contextseek/: __init__.py  _version.py  errors.py  scope.py
tests/integration_tests/: test_contextseek_m1_m3_flow.py  test_full_pipeline_file_example.py
tests/unit_tests/: test_audit.py  test_config.py  test_context_injection.py  test_contextseek_delete.py  test_dreaming.py  test_evolution.py  test_langchain_middleware.py  test_lint.py  test_mcp_runtime.py  test_powermem_plug.py  test_retrieval.py  test_routing.py  test_scope.py  test_security.py  test_settings.py  test_skill_export.py
(+107 files in other folders)
